# adk-book-code

./: .env  .env.example  .gitignore  README.md  devcontainer.json  pyproject.toml  test_all.sh  test_allv2.sh  utils.py
.devcontainer/: activate_venv.sh  devcontainer.json
chapter1/: main.py
chapter10/llm_examples/: claude_agent.py  gemini_direct.py  litellm_openai_agent.py  streaming_agent.py
chapter11/flows_planners_examples/: basic_flow_agent.py  builtin_planner_agent.py  react_planner_agent.py  research_assistant_planner.py
chapter12/multi_agent_systems/: hierarchical_structure.py
chapter13/orchestration_examples/: loop_refinement.py  parallel_analysis.py  sequential_pipeline.py
chapter14/advanced_mas/: langgraph_integration_conceptual.py
chapter15/runner_examples/: custom_runner_setup.py  run_config_demo.py  runner_invocation.py
chapter16/session_state_examples/: scoped_state_demo.py
chapter17/artifacts_examples/: in_memory_artifact_demo.py  load_artifacts_tool_demo.py  user_upload_as_artifact.py
chapter18/memory_examples/: in_memory_service_demo.py  memory_tools_agent.py  vertex_rag_memory_setup.py
chapter19/eval_agent/: agent.py
chapter19/my_agent_project/: agent.py
chapter2/hello_adk_agent/: agent.py
chapter2/my_new_chatbot/: agent.py
chapter20/hello_adk_agent/: agent.py
chapter21/auth_examples/: service_account_tool_demo.py
chapter22/telemetry_examples/: configure_otel_exporter.py
chapter25/meta_agent_output/: suggested_stock_tool.py
chapter4/agent_definitions/: basic_responder.py  callback_agent.py  creative_writer.py  dynamic_greeter.py  polite_translator.py
chapter5/tools/: calculator.py  stateful_tool.py  user_profile_tool.py
chapter6/tools_examples/: artifact_agent.py  choice_agent.py  memory_agent.py  search_agent.py  web_browser_agent.py
chapter7/tools_examples/: apihub_agent.py  openapi_petstore_agent.py  spotify_agent.py
chapter8/tools_examples/: app_integration_agent.py  crewai_adapter_agent.py  langchain_adapter_agent.py  mcp_filesystem_agent.py
chapter9/code_execution_examples/: builtin_executor_agent.py  container_executor_agent.py  unsafe_local_agent.py  (+1 more)
(+121 files in other folders)
