[project]
name = "building-intelligent-agents"
version = "0.1.0"
description = "Code for Building intelligent agents using Google ADK"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.0.0",
    "langchain-google-genai",
    "pydantic>=2.0, <3.0.0",
    "email-validator>=1.1",
    "beautifulsoup4>=4.12.2",
]
